--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
     lint:
-        name: Run python linters
+        name: Run flake8
         runs-on: ubuntu-latest
 
         steps:
@@ -43,28 +43,8 @@ jobs:
               run: |
                   python -m nox -s type-check
 
-    verify-types:
-        name: Verify types
-        runs-on: ubuntu-latest
-
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v3
-
-            - name: Setup Python 3.10
-              uses: actions/setup-python@v2
-              with:
-                  python-version: "3.10"
-
-            - name: install nox
-              run: |
-                  python -m pip install nox
-            - name: Run type checker
-              run: |
-                  python -m nox -s verify-types
-
     test:
-        name: Run python tests
+        name: Run pytest
         runs-on: ubuntu-latest
 
         steps:
@@ -84,7 +64,7 @@ jobs:
                   python -m nox -s test
 
     prettier:
-        name: Check json and markdown files with prettier
+        name: Run prettier
         runs-on: ubuntu-latest
 
         steps:
@@ -101,4 +81,4 @@ jobs:
                   python -m pip install nox
             - name: lint
               run: |
-                  python -m nox -s check-prettier
+                  python -m nox -s prettier-check
