--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -76,6 +76,9 @@ jobs:
               with:
                   python-version: "3.10"
 
+            - name: Setup Node
+              uses: actions/setup-node@v3
+
             - name: install nox
               run: |
                   python -m pip install nox
