--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -39,7 +39,7 @@ jobs:
             - name: install nox
               run: |
                   python -m pip install nox
-            - name: Run type checker
+            - name: run type checker
               run: |
                   python -m nox -s type-check
 
@@ -59,7 +59,7 @@ jobs:
             - name: install nox
               run: |
                   python -m pip install nox
-            - name: lint
+            - name: run tests
               run: |
                   python -m nox -s test
 
@@ -71,17 +71,20 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v3
 
+            - name: Setup Node
+              uses: actions/setup-node@v3
+
+            - name: Install prettier
+              run: npm install prettier
+
             - name: Setup Python 3.10
               uses: actions/setup-python@v3
               with:
                   python-version: "3.10"
 
-            - name: Setup Node
-              uses: actions/setup-node@v3
-
             - name: install nox
               run: |
                   python -m pip install nox
-            - name: lint
+            - name: run prettier
               run: |
                   python -m nox -s prettier-check
