--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -12,7 +12,7 @@ jobs:
               uses: actions/checkout@v3
 
             - name: Setup Python 3.10
-              uses: actions/setup-python@v3
+              uses: actions/setup-python@v4
               with:
                   python-version: "3.10"
 
@@ -32,7 +32,7 @@ jobs:
               uses: actions/checkout@v3
 
             - name: Setup Python 3.10
-              uses: actions/setup-python@v2
+              uses: actions/setup-python@v4
               with:
                   python-version: "3.10"
 
@@ -43,6 +43,26 @@ jobs:
               run: |
                   python -m nox -s type-check
 
+    verify-types:
+        name: Verify types
+        runs-on: ubuntu-latest
+
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v3
+
+            - name: Setup Python 3.10
+              uses: actions/setup-python@v4
+              with:
+                  python-version: "3.10"
+
+            - name: install nox
+              run: |
+                  python -m pip install nox
+            - name: run type checker
+              run: |
+                  python -m nox -s verify-types
+
     test:
         name: Run pytest
         runs-on: ubuntu-latest
@@ -52,7 +72,7 @@ jobs:
               uses: actions/checkout@v3
 
             - name: Setup Python 3.10
-              uses: actions/setup-python@v3
+              uses: actions/setup-python@v4
               with:
                   python-version: "3.10"
 
@@ -62,6 +82,11 @@ jobs:
             - name: run tests
               run: |
                   python -m nox -s test
+            - name: upload coverage
+              uses: codecov/codecov-action@v3
+              with:
+                  token: ${{ secrets.CODECOV_TOKEN }}
+                  files: .coverage/coverage.xml
 
     prettier:
         name: Run prettier
@@ -78,7 +103,7 @@ jobs:
               run: npm install prettier --global
 
             - name: Setup Python 3.10
-              uses: actions/setup-python@v3
+              uses: actions/setup-python@v4
               with:
                   python-version: "3.10"
 
